# dvc-k8s-parallel-runner-example

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.dvc/: config
pipelines/: sessions.yaml
pipelines/analyze/: dvc.yaml  params.yaml
pipelines/analyze/metrics/: metrics.json
pipelines/analyze/src/: aggregate.py  analyze.py
pipelines/load/: dvc.yaml  params.yaml
pipelines/load/data/: .gitignore
pipelines/load/data/raw/: .gitignore  09a32989-97d0-47ca-9918-527898d9bb26.csv.dvc  0cfda2cb-9a79-47ae-bc37-cd45306fa4ae.csv.dvc  1fb69a81-1078-4588-8909-8c3054697780.csv.dvc  2a29f7d7-ab4f-445f-898c-126777161162.csv.dvc  33952ecf-906a-4a30-881c-46007f34b50b.csv.dvc  3778272f-3275-483b-b5b9-248ec504bdff.csv.dvc  41e70b28-8057-4236-8cce-49c9accb947f.csv.dvc  583d6bfb-c5e0-4515-8880-fd8e183d75cd.csv.dvc  595df548-e819-449c-9607-e479a335e4cc.csv.dvc  5d36533d-4eee-41ad-8927-3bd962f85248.csv.dvc  650f589d-01b3-4c35-90e6-a1f4db56e0e8.csv.dvc  7038c22b-d5da-47c5-ab06-1b5da7f84d1f.csv.dvc  76e8531e-dcb0-48dc-8856-d703a5d575e7.csv.dvc  7b6bcdc5-8b55-4058-9ee1-24adb19b81d8.csv.dvc  88d97dd0-d1e1-4f64-8c20-d950569b7880.csv.dvc  92fdaf7d-d5c1-4d10-a283-e6dce50a06bf.csv.dvc  94dfa000-f9ed-4fbf-b732-eaa6e6183418.csv.dvc  99570843-e2ac-4be4-951e-d3b77f629d66.csv.dvc  c0880af0-376b-4170-bd66-0cf2bbc158f7.csv.dvc  ca48c98b-4e6b-4914-ab60-285d8bd1709e.csv.dvc
pipelines/load/src/: condition.py  load.py
